Ajout d'un paragraphe

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>>
+    <title>Document</title>
 </head>
 
 <body>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quis eos cum rem unde iure fuga ut laborum molestiae quidem eveniet tempora, laboriosam praesentium accusamus perspiciatis id quae ullam minus. Itaque debitis aut doloremque placeat
+        inventore quo non voluptatum libero culpa omnis, laborum dignissimos voluptatem modi distinctio veniam animi! Ipsum excepturi, autem totam repellat enim sed mollitia saepe quae deserunt? Ex et dolore expedita? Consequatur minima incidunt quidem
+        quos rem magni! Odit natus sapiente maxime id ipsam harum totam officia praesentium nobis nisi. Neque quasi animi, alias at beatae illo! Obcaecati accusamus suscipit, aliquid fugit debitis dolores pariatur dignissimos numquam! Mollitia vitae,
+        molestias molestiae vel cumque deserunt in illum voluptatem nemo repudiandae totam laudantium iure cupiditate! Adipisci nihil provident aliquid. Quibusdam, quis ab nobis totam iusto nesciunt qui, expedita non minima ullam distinctio accusantium?
+        Provident porro impedit dicta soluta enim ex, ut quaerat consequatur excepturi vitae exercitationem quo optio eveniet.</p>
 
 </body>
 
